fix modal not centering on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,9 +14,12 @@ body {
   overflow-x: hidden;
 }
 
-.template-preview-modal > .modal-dialog {
-  max-width: 90% !important;
-  width: 90% !important;
+
+@media (min-width: 768px) {
+  .template-preview-modal > .modal-dialog {
+    width: 90%;
+    max-width: 1200px;
+  }
 }
 
 .template-preview-modal > .modal-dialog > .modal-content {
